Filter function added

--- a/index.html
+++ b/index.html
@@ -30,43 +30,41 @@
         <div class="portfolio content">
             <h2 class="break-header">+ Portfolio</h2>
             <div class="portfolio internal-content">
-                <!--
                 <div class="internal-nav">
                     <select id="filter"></select>
                 </div>
-                -->
                 <div class="portfolio internal-grid">
-                    <div data-filter="">
+                    <div data-filter="highlights customer-churn-prediction machine-learning">
                         <h4>Customer churn prediction</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Using Python's pandas and scikit-learn libraries, identified the key characteristics of customer churn in the business, and implemented a gradient boosting machine for early detection of customer churn.</p>
                     </div>
-                    <div data-filter="">
+                    <div data-filter="highlights dashboards-web-apps recommender-engine machine-learning">
                         <h4>Sales dashboard</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Using R's Shiny library, built a dashboard for the business's sales team, allowing key account managers to immediately identify and respond to lost customer sales, quickly familiarise themselves with customers when working on the road, and make product recommendations to customers with greater confidence.</p>
                     </div>
-                    <div data-filter="">
+                    <div data-filter="highlights qualitative-choice-analysis">
                         <h4>Qualitative choice analysis</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Analysing sales category share by customer, developed a qualitative choice model to upturn conventional wisdom, namely that focussing marketing resources on 'artisan' product would increase sales more than focussing resources on 'essential' product.</p>
                     </div>
-                    <div data-filter="">
+                    <div data-filter="highlights dashboards-web-apps">
                         <h4>Product simulation</h4>
                         <h5>Hillridge Technology, 2018</h5>
-                        <p>Using R's Shiny library, wrote a web app to simulate pricing a derivative for a customer based on historical climate data and current climate outlooks.</p>
+                        <p>Using R's Shiny library and custom JavaScript, wrote a web app to simulate pricing a derivative for a customer based on historical climate data and current climate outlooks.</p>
                     </div>
-                    <div data-filter="">
+                    <div data-filter="highlights optimisation">
                         <h4>Human resources optimisation</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Analysing customer ordering times and comparing with rostered customer service hours, identified a suboptimal allocation of human resources, which, once rectified, allowed the business to service more customers at marginally less cost.  </p>
                     </div>
-                    <div data-filter="">
+                    <div data-filter="highlights optimisation">
                         <h4>Product recategorisation</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Using Google Analytics data, identified major shortcomings in the user experience finding product online, and revised the business's product categorisation (based on sales data) in response, in order to facilitate increased browsing and cross-selling.</p>
                     </div>
-                    <div data-filter="">
+                    <div data-filter="highlights dashboards-web-apps sql r">
                         <h4>Product tagging: data infrastructure</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Created two new tables in the relevant database to facilitate flexible product tagging in order to improve the customer UX online and increase sales through increased discovery of new product. To avoid an expensive add-on to our main ERP software by third-party IT, I wrote a portable web app using R' Shiny package that allows internal users to self-service tag management in a user-friendly interface.</p>
