--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
                     <select id="filter"></select>
                 </div>
                 <div class="portfolio internal-grid">
-                    <div data-filter="highlights customer-churn-prediction machine-learning">
+                    <div data-filter="highlights customer-churn-prediction machine-learning python">
                         <h4>Customer churn prediction</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Using Python's pandas and scikit-learn libraries, identified the key characteristics of customer churn in the business, and implemented a gradient boosting machine for early detection of customer churn.</p>
                     </div>
-                    <div data-filter="highlights dashboards-web-apps recommender-engine machine-learning">
+                    <div data-filter="highlights dashboards-web-apps recommender-engine machine-learning r">
                         <h4>Sales dashboard</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Using R's Shiny library, built a dashboard for the business's sales team, allowing key account managers to immediately identify and respond to lost customer sales, quickly familiarise themselves with customers when working on the road, and make product recommendations to customers with greater confidence.</p>
                     </div>
-                    <div data-filter="highlights qualitative-choice-analysis">
+                    <div data-filter="highlights qualitative-choice-analysis python">
                         <h4>Qualitative choice analysis</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Analysing sales category share by customer, developed a qualitative choice model to upturn conventional wisdom, namely that focussing marketing resources on 'artisan' product would increase sales more than focussing resources on 'essential' product.</p>
                     </div>
-                    <div data-filter="highlights dashboards-web-apps">
+                    <div data-filter="highlights dashboards-web-apps r">
                         <h4>Product simulation</h4>
                         <h5>Hillridge Technology, 2018</h5>
                         <p>Using R's Shiny library and custom JavaScript, wrote a web app to simulate pricing a derivative for a customer based on historical climate data and current climate outlooks.</p>
                     </div>
-                    <div data-filter="highlights optimisation">
+                    <div data-filter="highlights optimisation r">
                         <h4>Human resources optimisation</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Analysing customer ordering times and comparing with rostered customer service hours, identified a suboptimal allocation of human resources, which, once rectified, allowed the business to service more customers at marginally less cost.  </p>
