Changes to content filters

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <h5>Two Providores, 2018</h5>
                         <p>Using Python's pandas and scikit-learn libraries, identified the key characteristics of customer churn in the business, and implemented a gradient boosting machine for early detection of customer churn.</p>
                     </div>
-                    <div data-filter="highlights dashboards-web-apps recommender-engine machine-learning r">
+                    <div data-filter="highlights dashboards-web-apps recommender-engine machine-learning r network-analysis">
                         <h4>Sales dashboard</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Using R's Shiny library, built a dashboard for the business's sales team, allowing key account managers to immediately identify and respond to lost customer sales, quickly familiarise themselves with customers when working on the road, and make product recommendations to customers with greater confidence.</p>
