--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
         <!-- <link rel="stylesheet" href="normalize.css"> -->
         <!-- <link rel="stylesheet" href="selectize.css"> -->
         <link rel="stylesheet" href="selectize.bootstrap3.css">
+        <link rel="stylesheet" href="viewer.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script> -->
         <script src="selectize.js"></script>
+        <script src="viewer.js"></script>
         <script src="script.js"></script>
     </head>
-    <body>            
+    <!-- <div class="background"></div> -->
+    <body>  
         <div id="dp"><img src ="dp.jpg"></div>
         <div class="visual-buffer"></div>
         <div class="visual-buffer"></div>
@@ -43,6 +46,18 @@
                         <h4>Sales dashboard</h4>
                         <h5>Two Providores, 2018</h5>
                         <p>Using R's Shiny library, built a dashboard for the business's sales team, allowing key account managers to immediately identify and respond to lost customer sales, quickly familiarise themselves with customers when working on the road, and make product recommendations to customers with greater confidence.</p>
+                        <p>
+                            <a class="portfolio-link">images</a>
+                            <dialog>
+                                <img src="tp%20dashboard%20trend%20down.jpg" class="image">
+                                <img src="tp%20dashboard%20trend%20up.jpg" class="image">
+                                <!-- 
+                                    <img src="tp%20dashboard%20product%20current.jpg" class="image">
+                                    <img src="tp%20dashboard%20product%20target.jpg" class="image">
+                                -->
+                            </dialog>
+                            <!-- <a class="portfolio-link">code</a> -->
+                        </p>
                     </div>
                     <div data-filter="highlights qualitative-choice-analysis python">
                         <h4>Qualitative choice analysis</h4>
@@ -53,6 +68,16 @@
                         <h4>Product simulation</h4>
                         <h5>Hillridge Technology, 2018</h5>
                         <p>Using R's Shiny library and custom JavaScript, wrote a web app to simulate pricing a derivative for a customer based on historical climate data and current climate outlooks.</p>
+                        <p>
+                            <a class="portfolio-link">images</a>
+                            <dialog>
+                                <img src="hillridge%20web%20app%20i.png" class="image">
+                                <img src="hillridge%20web%20app%20ii.png" class="image">
+                                <img src="hillridge%20web%20app%20iii.png" class="image">
+                            </dialog>
+                            <!-- <a class="portfolio-link">code</a> -->
+                        </p>
+                        
                     </div>
                     <div data-filter="highlights optimisation r">
                         <h4>Human resources optimisation</h4>
@@ -67,7 +92,16 @@
                     <div data-filter="highlights dashboards-web-apps sql r">
                         <h4>Product tagging: data infrastructure</h4>
                         <h5>Two Providores, 2018</h5>
-                        <p>Created two new tables in the relevant database to facilitate flexible product tagging in order to improve the customer UX online and increase sales through increased discovery of new product. To avoid an expensive add-on to our main ERP software by third-party IT, I wrote a portable web app using R' Shiny package that allows internal users to self-service tag management in a user-friendly interface.</p>
+                        <p>Created two new tables in the relevant database to facilitate flexible product tagging in order to improve the customer UX online and increase sales through increased discovery of new product. To avoid an expensive add-on to our main ERP software by third-party IT, I wrote a portable web app using R's Shiny library that allows internal users to self-service tag management in a user-friendly interface.</p>
+                        <p>
+                            <a class="portfolio-link">images</a>
+                            <dialog>
+                                <img src="tp%20tagging%20i.png" class="image">
+                                <img src="tp%20tagging%20ii.png" class="image">
+                                <img src="tp%20tagging%20iii.png" class="image">
+                            </dialog>
+                            <!-- <a class="portfolio-link">code</a> -->
+                        </p>
                     </div>
                 </div>
             </div>
