added all-browser image viewing

--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
                         <p>
                             <a class="portfolio-link">images</a>
                             <dialog>
+                                <a class="pagination-left"><</a>
                                 <img src="tp%20dashboard%20trend%20down.jpg" class="image">
                                 <img src="tp%20dashboard%20trend%20up.jpg" class="image">
                                 <!-- 
                                     <img src="tp%20dashboard%20product%20current.jpg" class="image">
                                     <img src="tp%20dashboard%20product%20target.jpg" class="image">
                                 -->
+                                <a class="pagination-right">></a>
                             </dialog>
                             <!-- <a class="portfolio-link">code</a> -->
                         </p>
@@ -69,9 +71,11 @@
                         <p>
                             <a class="portfolio-link">images</a>
                             <dialog>
+                                <a class="pagination-left"><</a>
                                 <img src="hillridge%20web%20app%20i.png" class="image">
                                 <img src="hillridge%20web%20app%20ii.png" class="image">
                                 <img src="hillridge%20web%20app%20iii.png" class="image">
+                                <a class="pagination-right">></a>
                             </dialog>
                             <!-- <a class="portfolio-link">code</a> -->
                         </p>
@@ -94,9 +98,11 @@
                         <p>
                             <a class="portfolio-link">images</a>
                             <dialog>
+                                <a class="pagination-left"><</a>
                                 <img src="tp%20tagging%20i.png" class="image">
                                 <img src="tp%20tagging%20ii.png" class="image">
                                 <img src="tp%20tagging%20iii.png" class="image">
+                                <a class="pagination-right">></a>
                             </dialog>
                             <!-- <a class="portfolio-link">code</a> -->
                         </p>
