--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
         D'Arcy Roche
     </title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <head>
         <link rel="stylesheet" href="style.css">
