--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <div id="dp"><img src ="dp.jpg"></div>
+        <div id="dp"></div>
         <div class="visual-buffer"></div>
         <div class="visual-buffer"></div>
         <div id="masthead" class="text">
@@ -162,35 +162,6 @@
                             <li>co-wrote successful grant application to the City of Sydney</li>
                             <li>co-wrote successful Linkage grant application to the Australian Research Council</li>
                         </ul>
-                    </div>
-
-                    <div>
-                        <h4>Customer Service</h4>
-                        <h5>
-                            Two Providores<br>
-                            February 2016–June 2018
-                        </h5>
-                    </div>
-
-                    <div>
-                        <h4>international travel through Europe and Asia</h4>
-                        <h5>October 2015–January 2016</h5>
-                    </div>
-
-                    <div>
-                        <h4>Consultant</h4>
-                        <h5>
-                            Flight Centre, Leichhardt Norton Plaza<br>
-                            February 2015–September 2015
-                        </h5>
-                    </div>
-
-                    <div>
-                        <h4>Retail assistant</h4>
-                        <h5>
-                            House, Broadway<br>
-                            July 2012–January 2015
-                        </h5>
                     </div>
                 </div>
                 <h2 class="break-header">+ Education</h2>
